--- a/BattleHack2015.cabal
+++ b/BattleHack2015.cabal
@@ -54,6 +54,7 @@ executable BattleHack2015
   other-modules:       BattleHack.Render,
                        BattleHack.Events,
                        BattleHack.Types
+                       BattleHack.Lenses
 
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:
@@ -61,7 +62,8 @@ executable BattleHack2015
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.8 && <4.9,
                        gtk3,
-                       cairo
+                       cairo,
+                       lens
 
   -- Directories containing source files.
   hs-source-dirs:      src
