--- a/BattleHack2015.cabal
+++ b/BattleHack2015.cabal
@@ -67,7 +67,8 @@ executable BattleHack2015
                        lens,
                        OpenAL,
                        StateVar,
-                       vector
+                       vector,
+                       text
 
   -- Directories containing source files.
   hs-source-dirs:      src
