--- a/cabal.sandbox.config
+++ b/cabal.sandbox.config
@@ -4,15 +4,15 @@
 -- if you want to change the default settings for this sandbox.
 
 
-local-repo: C:\Users\jonat\Desktop\BattleHack-2015\.cabal-sandbox\packages
-logs-dir: C:\Users\jonat\Desktop\BattleHack-2015\.cabal-sandbox\logs
-world-file: C:\Users\jonat\Desktop\BattleHack-2015\.cabal-sandbox\world
+local-repo: C:\Users\Jonatan\Desktop\Haskell\projects\BattleHack-2015\.cabal-sandbox\packages
+logs-dir: C:\Users\Jonatan\Desktop\Haskell\projects\BattleHack-2015\.cabal-sandbox\logs
+world-file: C:\Users\Jonatan\Desktop\Haskell\projects\BattleHack-2015\.cabal-sandbox\world
 user-install: False
-package-db: C:\Users\jonat\Desktop\BattleHack-2015\.cabal-sandbox\x86_64-windows-ghc-7.10.2-packages.conf.d
-build-summary: C:\Users\jonat\Desktop\BattleHack-2015\.cabal-sandbox\logs\build.log
+package-db: C:\Users\Jonatan\Desktop\Haskell\projects\BattleHack-2015\.cabal-sandbox\x86_64-windows-ghc-7.8.3-packages.conf.d
+build-summary: C:\Users\Jonatan\Desktop\Haskell\projects\BattleHack-2015\.cabal-sandbox\logs\build.log
 
 install-dirs
-  prefix: C:\Users\jonat\Desktop\BattleHack-2015\.cabal-sandbox
+  prefix: C:\Users\Jonatan\Desktop\Haskell\projects\BattleHack-2015\.cabal-sandbox
   bindir: $prefix\bin
   libdir: $prefix
   libsubdir: $abi\$libname
