--- a/BattleHack2015.cabal
+++ b/BattleHack2015.cabal
@@ -58,7 +58,8 @@ executable BattleHack2015
                        BattleHack.Piano,
                        BattleHack.Audio,
                        BattleHack.Utilities.Vector,
-                       BattleHack.Utilities.Math
+                       BattleHack.Utilities.Math,
+                       BattleHack.Utilities.General
 
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:
@@ -71,10 +72,26 @@ executable BattleHack2015
                        OpenAL,
                        StateVar,
                        vector,
-                       text
+                       text,
+                       aeson,
+                       containers
 
   -- Directories containing source files.
   hs-source-dirs:      src
 
   -- Base language which the package is written in.
   default-language:    Haskell2010
+
+  -- C dependencies
+  include-dirs:        C:\\Users\\Jonatan\\Downloads\\Programmering\\freealut\\include\\AL,
+                       C:\\Users\\Jonatan\\Downloads\\bin\\openal-soft-1.16.0-bin\\openal-soft-1.16.0-bin\\include
+                       -- C:\\Users\\Jonatan\\Downloads\\Programmering\\freetype-2.5.5-vc11-64\\freetype-2.5.5-vc11-64\\include,
+                       -- C:\\Users\\Jonatan\\Downloads\\Programmering\\ftgl-2.1.3-vc11-64\\ftgl-2.1.3-vc11-64\\include
+
+  extra-lib-dirs:      C:\\Users\\Jonatan\\Downloads\\Programmering\\freealut\\admin\\VisualStudio6\\alut\\x64\\Release,
+                       C:\\Users\\Jonatan\\Downloads\\bin\\openal-soft-1.16.0-bin\\openal-soft-1.16.0-bin\\libs\\Win64
+                       -- C:\\Users\\Jonatan\\Downloads\\Programmering\\freetype-2.5.5-vc11-64\\freetype-2.5.5-vc11-64\\lib,
+                       -- C:\\Users\\Jonatan\\Downloads\\Programmering\\ftgl-2.1.3-vc11-64\\ftgl-2.1.3-vc11-64\\lib
+
+  includes:            alut.h
+  extra-libraries:     OpenAL32, alut
