--- a/BattleHack2015.cabal
+++ b/BattleHack2015.cabal
@@ -51,7 +51,8 @@ executable BattleHack2015
   main-is:             Main.hs
 
   -- Modules included in this executable, other than Main.
-  other-modules:       BattleHack.Render,
+  other-modules:       BattleHack.Window,
+                       BattleHack.Render,
                        BattleHack.Events,
                        BattleHack.Types
                        BattleHack.Lenses,
