Taking a short break from this project

--- a/BattleHack2015.cabal
+++ b/BattleHack2015.cabal
@@ -75,7 +75,8 @@ executable BattleHack2015
                        vector,
                        text,
                        aeson,
-                       containers
+                       containers,
+                       monad-loops >=0.4
 
   -- Directories containing source files.
   hs-source-dirs:      src
